--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.4",
     "react-resizable-panels": "^3.0.2",
+    "recharts": "^3.2.0",
     "tailwind-merge": "^3.3.0",
     "vaul": "^1.1.2",
     "zod": "^3.25.20"
